# hachimi-world-client

./: .aiexclude  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: CONTRIBUTING.md
.github/workflows/: build-ios-test.yml  compile-check.yml  jvm-compile-check.yml  pages-deployment.yml  publish-version-test.yml  release-distribution.yml
androidApp/: build.gradle.kts
androidApp/src/main/kotlin/world/hachimi/app/: MainActivity.kt  MyApplication.kt
composeApp/: build.gradle.kts
composeApp/src/androidMain/kotlin/world/hachimi/app/: MainActivity.kt  Platform.android.kt
composeApp/src/commonMain/composeResources/drawable/: icon_bilibili.xml
composeApp/src/commonMain/composeResources/values/: auth.xml  components.xml  home.xml  navigation.xml  player.xml  playlist.xml  publish.xml  recent_play.xml  review.xml  search.xml  settings.xml  strings.xml  upgrade.xml  user_space.xml
composeApp/src/commonMain/composeResources/values-zh/: auth.xml  components.xml  home.xml  navigation.xml  player.xml  playlist.xml  publish.xml  recent_play.xml  review.xml  search.xml  settings.xml  strings.xml  upgrade.xml  user_space.xml
composeApp/src/commonMain/kotlin/world/hachimi/app/: Platform.kt
composeApp/src/iosMain/kotlin/world/hachimi/app/: MainViewController.kt  (+1 more)
composeApp/src/jvmMain/kotlin/uniffi/hachimi/: hachimi.kt
composeApp/src/jvmMain/resources/: logback.xml
composeApp/src/webMain/kotlin/howler/: Howler.kt
composeApp/src/webMain/resources/: index.html
gradle/: libs.versions.toml
iosApp/iosApp/: Info.plist
iosApp/iosApp.xcodeproj/: project.pbxproj
iosApp/iosApp/AppIcon.icon/: icon.json
rustLib/: Cargo.toml  build.rs
rustLib/src/: hachimi.udl  lib.rs
(+285 files in other folders)
