[package]
name = "hachimi"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
rodio = "0.22.2"
uniffi = { version = "0.30", features = ["cli"] }
log = "0.4.29"
souvlaki = "0.8.3"
url = "2.5.7"
winit = "0.30.12"
stream-download = { version = "0.24.0", features = ["async-read", "reqwest-rustls"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = { version = "0.3.22", features = ["json"] }
tracing = "0.1.44"
thiserror = "2.0.17"
anyhow = "1.0.100"
once_cell = "1.21.3"
jni = "0.21.1"
oneshot = { version = "0.2.1", features = ["std"] }

[build-dependencies]
uniffi = { version = "0.30", features = ["build"] }

[target.'cfg(target_os = "macos")'.dependencies]
cacao = "0.3.2"